--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -82,7 +82,7 @@
 
 /* Set */
 
-.editorWrapper.isSet { width: calc(100% - 192px); }
+.editorWrapper.isSet { width: calc(100% - 192px); padding-top: 58px; }
 .editorWrapper.isSet {
 	.blocks { margin-left: 0px; }
 	.blocks {
@@ -91,7 +91,14 @@
 			.wrapContent { width: 100%; }
 		}
 	}
+
+	.editorControls { height: 86px; }
+	.editorControls { 
+		#button-add-cover { display: none; }
+	}
 }
+.editorWrapper.isSet.withIcon { padding-top: 68px; }
+.editorWrapper.isSet.withIconAndCover { padding-top: 232px; }
 
 .editor.help {
 	.blocks {
