ObjectLayout.Contact -> Human

--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -108,9 +108,9 @@
 	}
 }
 
-/* Contact */
+/* Human */
 
-.editorWrapper.isContact.withIconAndCover {
+.editorWrapper.isHuman.withIconAndCover {
 	.block.blockCover.align0 {
 		.elements {
 			.buttons { padding-left: 150px; }
