--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -31,7 +31,7 @@
 			.icon.page { background-image: url('~img/icon/menu/action/block/page1.svg'); }
 			.icon.task { background-image: url('~img/icon/menu/action/block/task1.svg'); }
 			.icon.set { background-image: url('~img/icon/menu/action/block/set1.svg'); }
-			.icon.contact { background-image: url('~img/icon/menu/action/block/contact1.svg'); }
+			.icon.human { background-image: url('~img/icon/menu/action/block/human1.svg'); }
 			.icon.existing { background-image: url('~img/icon/menu/action/block/existing1.svg'); }
 			
 			.icon.checkbox { background-image: url('~img/icon/menu/action/block/checkbox1.svg'); }
