--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -17,7 +17,7 @@
 		
 		.icon.task { background-image: url('~img/icon/menu/action/block/task0.svg'); }
 		.icon.set { background-image: url('~img/icon/menu/action/block/set0.svg'); }
-		.icon.contact { background-image: url('~img/icon/menu/action/block/contact0.svg'); }
+		.icon.human { background-image: url('~img/icon/menu/action/block/human0.svg'); }
 		.icon.existing { background-image: url('~img/icon/menu/action/block/existing0.svg'); }
 		
 		.icon.file { background-image: url('~img/icon/menu/action/block/file0.svg'); }
