--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -66,10 +66,10 @@
 	.editorControls { display: none; }
 }
 
-/* Contact */
+/* Human */
 
-.editorWrapper.isContact.withIcon { padding-top: 122px; }
-.editorWrapper.isContact.withIcon {
+.editorWrapper.isHuman.withIcon { padding-top: 122px; }
+.editorWrapper.isHuman.withIcon {
 	.editorControls { height: 240px; }
 	.editorControls { 
 		.buttons { padding-left: 148px; }
@@ -78,7 +78,7 @@
 		.buttons { left: 50%; padding-left: 84px; }
 	}
 }
-.editorWrapper.isContact.withIconAndCover { padding-top: 208px; }
+.editorWrapper.isHuman.withIconAndCover { padding-top: 208px; }
 
 /* Set */
 
