--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -12,7 +12,7 @@
 .button.grey:hover { box-shadow: 0px 0px 0px 1px $colorBlack inset; }
 
 .button.grey.filled { background: $colorLightGrey; color: #fff; box-shadow: 0px 0px; }
-.button.grey:hover { box-shadow: 0px 0px; }
+.button.grey.filled:hover { box-shadow: 0px 0px; }
 
 .button.blank { line-height: 36px; background: none; border: solid 1px #dfddd0; }
 .button.blank:hover { border-color: $colorBlack; }
