--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -59,7 +59,7 @@
 			.cell.isEditing.c-object { 
 				.cellContent { padding-bottom: 12px; }
 			}
-			.cell.isEditing.c-description { 
+			.cell.isEditing.c-longText { 
 				.cellContent { display: none; }
 			}
 			.cell.isEditing.c-checkbox { 
