--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -11,8 +11,8 @@
 				
 				.cellContent.c-date { color: #6c6a5f; }
 
-				.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
-				.cellContent.c-title {
+				.cellContent.c-shortText { @include text-paragraph; margin-bottom: 6px; }
+				.cellContent.c-shortText {
 					.iconObject { margin-bottom: 10px; }
 					.name { height: 24px; width: 100% !important; }
 				}
