--- a/src/scss/block/dataview/view/list.scss
+++ b/src/scss/block/dataview/view/list.scss
@@ -11,8 +11,8 @@
 			.cellContent:last-child { margin: 0px; }
 			.cellContent:empty { display: none; }
 
-            .cellContent.c-title { @include text-paragraph; }
-			.cellContent.c-title {
+            .cellContent.c-shortText { @include text-paragraph; }
+			.cellContent.c-shortText {
 				.name { @include text-overflow-nw; max-width: 200px; display: inline; line-height: 24px; }
 			}
 
