--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -36,7 +36,7 @@
 			.cellContent { position: static; padding: 5px 8px !important; }
 		}
 
-		.cell.isEditing.c-description, .cell.isEditing.c-file { 
+		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
 			.cellContent { box-shadow: 0px 0px; border: 0px; }
 		}
 	}
