--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -24,8 +24,8 @@
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
 .icon.relation.default { background-image: url('~img/icon/menu/action/block/relation0.svg'); }
-.icon.relation.c-description { background-image: url('~img/icon/dataview/relation/description.svg'); }
-.icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
+.icon.relation.c-longText { background-image: url('~img/icon/dataview/relation/longText.svg'); }
+.icon.relation.c-shortText { background-image: url('~img/icon/dataview/relation/shortText.svg'); }
 .icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
 .icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
 .icon.relation.c-select.isTag { background-image: url('~img/icon/dataview/relation/tag.svg'); }
