--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -49,8 +49,8 @@
 			.inner { position: relative; width: 100%; height: 28px; }
 			.input { padding: 0px; height: 22px; line-height: 22px; vertical-align: top; border: 0px; width: calc(100% - 24px); }
 			.icon.clear { 
-				width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 0px; top: 50%;
-				margin-top: -10px; cursor: pointer; opacity: 0;
+				width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 0px; top: 0px;
+				cursor: pointer; opacity: 0;
 			}
 			.icon.clear:hover { background-image: url('~img/icon/clear1.svg'); }
 
