--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -66,7 +66,7 @@
 
 	.side.center { 
 		border: 1px solid rgba(255,255,255,0.5); border-radius: 6px;height: 28px; line-height: 26px; color: #fff; text-align: center;
-		cursor: text;
+		cursor: pointer;
 	}
 }
 
