--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -4,6 +4,7 @@
 	.menu.menuDataviewOptionList,
 	.menu.menuDataviewOptionValues {
 		.tagItem { vertical-align: top; margin-top: 1px; }
+		.tagItem.isStatus { margin-top: 0px; }
 		.item.add {
 			.name { @include text-overflow-nw; width: calc(100% - 24px); }
 		}
