--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -18,6 +18,7 @@
 				.line { width: 1px; height: 100%; background: #e0ded2; position: absolute; top: 0px; left: 19px; }
 			}
 		}
+		.cellHead.last { overflow: visible; }
 		.cellHead.last {
 			.icon.plus { margin: 0px; }
 		}
