--- a/src/scss/popup/search.scss
+++ b/src/scss/popup/search.scss
@@ -32,6 +32,9 @@
 		.items { height: 100%; }
 		.items {
 			.pad { height: 12px; }
+
+			.section { height: 32px; line-height: 22px; padding: 5px 16px; font-weight: 500; color: $colorDarkGrey; }
+
 			.item { 
 				cursor: pointer; transition: $transitionFast; position: relative; height: 32px; line-height: 22px; padding: 5px 16px; white-space: nowrap;
 			}
