--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
-.pageMainObjectType {
+.pageMainType {
 	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; }
 	.wrapper {
 		.head { display: flex; margin-bottom: 35px; }
