--- a/src/scss/block/layout.scss
+++ b/src/scss/block/layout.scss
@@ -38,10 +38,12 @@
 	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockMedia > .wrapContent > .selectable > .dropTarget { padding-bottom: 0px; }
 	
 	/* Div */
+	.block.blockLayout.c2 { margin: 0px !important; }
 	.block.blockLayout.c2 > .wrapMenu { display: none; }
 	.block.blockLayout.c2 > .wrapContent { width: 100%; overflow: visible; }
 
 	/* Header */
+	.block.blockLayout.c3 { margin: 0px !important; }
 	.block.blockLayout.c3 > .wrapMenu { display: none; }
 	.block.blockLayout.c3 > .wrapContent { width: 100%; overflow: visible; }
 }
