--- a/src/scss/popup/common.scss
+++ b/src/scss/popup/common.scss
@@ -12,7 +12,7 @@
 	.popup {
 		.innerWrap { 
 			position: absolute; left: 50%; top: 50%; z-index: 1; background: #fff; border-radius: 12px; box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.35);
-			opacity: 0; transform: scale3d(0.8,0.8,1); transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out; overflow: hidden;
+			opacity: 0; transform: scale3d(0.8,0.8,1); transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out; overflow: auto;
 		}
 		.content { opacity: 0; transition: opacity 0.05s ease-in-out; transition-delay: 0.05s; }
 
