--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -37,6 +37,15 @@
 .icon.relation.c-email { background-image: url('~img/icon/dataview/relation/email.svg'); }
 .icon.relation.c-phone { background-image: url('~img/icon/dataview/relation/phone.svg'); }
 
+.icon.layout-page { background-image: url('~img/icon/object/page.svg'); }
+.icon.layout-human { background-image: url('~img/icon/object/human.svg'); }
+.icon.layout-task { background-image: url('~img/icon/object/task.svg'); }
+.icon.layout-set { background-image: url('~img/icon/object/set.svg'); }
+.icon.layout-file { background-image: url('~img/icon/object/file.svg'); }
+.icon.layout-image { background-image: url('~img/icon/object/image.svg'); }
+.icon.layout-type { background-image: url('~img/icon/object/type.svg'); }
+.icon.layout-relation { background-image: url('~img/icon/object/relation.svg'); }
+
 .icon.iconFile.other { background-image: url('~img/icon/file/other.svg') !important; }
 .icon.iconFile.image { background-image: url('~img/icon/file/image.svg') !important; }
 .icon.iconFile.video { background-image: url('~img/icon/file/video.svg') !important; }
