BlockFeatured moved to separate block from EditorHeaderPage

--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -3,13 +3,19 @@
 .pageMainType {
 	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; }
 	.wrapper {
+
+		.block {
+			.wrapMenu { display: none; }
+		}
+		.block.blockFeatured { @include text-common; padding: 0px; margin: 0px; }
+
 		.head { display: flex; margin-bottom: 35px; }
 		.head {
 			.side.left { width: 96px; flex-shrink: 0; margin-right: 32px; }
 			.side.right { width: calc(100% - 128px); }
 
-			.title { @include text-header1; margin-bottom: 5px; }
-			.descr { @include text-paragraph; }
+			.title { @include text-header1; }
+			.descr { @include text-paragraph; margin: 5px 0px 9px 0px; }
 		}
 
 		.section { margin-bottom: 32px; }
