--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -2,6 +2,8 @@
 
 .popups {
 	.popup.popupStore {
+		.innerWrap { width: 1152px; }
+
 		.content { height: 100%; padding-top: 40px; }
 		.wrapper { height: 100%; }
 
@@ -20,7 +22,7 @@
 			}
 		}
 
-		.body { width: 100%; height: 100%; padding: 96px 96px 56px 96px; overflow-y: auto; }
+		.body { width: 100%; height: 100%; padding: 96px 96px 56px 96px; overflow-y: auto; display: flex; flex-direction: column; }
 		.body {
 			.mid { text-align: center; margin-bottom: 57px; }
 			.mid {
@@ -42,6 +44,9 @@
 				.item:last-child { margin: 0px; }
 			}
 
+			.loaderWrapper { position: relative; }
+
+			.items { overflow: auto; }
 			.items {
 				.item { display: inline-block; vertical-align: top; position: relative; cursor: pointer; }
 
