--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -113,6 +113,9 @@
 			.info:hover { background: rgba(172,169,150,0.15); }
 
 			.cell { padding: 5px 8px; margin-right: 6px; }
+			.cell.c-longText.isEditing {
+				.cellContent { padding: 5px 8px !important; }
+			}
 
 			.icon.fav { display: none; margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
 			.icon.fav:hover, .icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
