--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -35,6 +35,14 @@
 			}
 		}
 
+		.editorWrapper.isHuman.withIconAndCover {
+			.block.blockCover {
+				.elements {
+					.buttons { padding-left: 150px; }
+				}
+			}
+		}
+
 		.block.blockCover { top: 0px; }
 	}	
 }
