--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -4,7 +4,7 @@
 .iconObject {
 	img { pointer-events: none; }
 
-	.iconEmoji, .iconImage, .iconFile, .iconUser, .iconCheckbox { width: 100%; height: 100%; transition: none; vertical-align: top; }
+	.iconEmoji, .iconImage, .iconFile, .iconUser, .iconCheckbox { width: inherit; height: inherit; transition: none; vertical-align: top; }
 	.iconImage, .iconCheckbox { background-size: cover; object-fit: cover; }
 	.iconImage { border-radius: inherit; }
 
@@ -21,7 +21,7 @@
 
 	.iconUser { 
 		border-radius: inherit; position: relative; overflow: hidden; text-transform: uppercase; color: #fff; text-align: center; 
-		background-color: $colorLightGrey; width: 100%; height: 100%; font-weight: 500; font-family: 'Lcg';
+		background-color: $colorLightGrey; font-weight: 500; font-family: 'Lcg';
 	}
 	.iconUser {
 		.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
