--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -70,8 +70,8 @@
 	.input-text { width: 346px; vertical-align: middle; margin-right: 16px; }
 	.button { vertical-align: middle; width: 134px; padding: 0px; }	
 	.iconObject { margin-bottom: 0px; }
-	.iconUser { background-image: url('~img/icon/picture.svg'); background-size: 24px 18px; background-repeat: no-repeat; background-position: center; }
-	.iconUser.active {
+	.iconObject { background-image: url('~img/icon/picture.svg'); background-size: 24px 18px; background-repeat: no-repeat; background-position: center; }
+	.iconObject.active {
 		.image { background-size: cover; }
 	}
 }
