--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -96,6 +96,7 @@ html.platformWindows {
 .readOnly { -webkit-user-modify: read-only !important; }
 .no-br { border-radius: unset !important; }
 .over { overflow: hidden !important; }
+.isHidden { background: rgba(255,192,203,0.3) !important; }
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
