--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -2,7 +2,7 @@ $bgColor: rgba(79,177,239,0.1);
 
 html.debug {
 	#selection-rect { opacity: 1; }
-	#menu-polygon { background: pink; opacity: 0.3; }
+	#menu-polygon { background: rgba(255,192,203,0.3); }
 	.polygon { opacity: 0.7; background: pink; }
 	
 	.blocks {
