--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -29,11 +29,15 @@
 
 		.cell { @include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; }
 		
-		.cell.c-select { padding: 7px 8px; }
+		.cell.c-select { padding: 7px 8px 0px 8px; }
 
 		.cell.isEditing { padding: 0px; }
 		.cell.isEditing {
-			.cellContent { position: static; padding: 5px 8px !important; }
+			.cellContent { position: static; height: auto !important; padding: 5px 8px !important; }
+		}
+
+		.cell.c-select.isEditing {
+			.cellContent { padding-bottom: 0px !important; }
 		}
 
 		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
