--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -40,6 +40,10 @@
 			.cellContent { padding-bottom: 0px !important; }
 		}
 
+		.cell.c-object.isEditing {
+			.cellContent { padding-bottom: 3px !important; }
+		}
+
 		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
 			.cellContent { box-shadow: 0px 0px; border: 0px; }
 		}
