--- a/src/scss/popup/search.scss
+++ b/src/scss/popup/search.scss
@@ -26,7 +26,7 @@
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
 		.empty {
 			b { display: block; font-weight: 400; color: $colorBlack; }
-			.label { line-height: 24px; color: $colorDarkGrey; }
+			.label { line-height: 24px; color: $colorDarkGrey; display: inline-block; vertical-align: middle; }
 		}
 		
 		.items { height: 100%; }
