CU-gjh48u: Relation page fixes

--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -11,6 +11,7 @@
 			.name { @include text-overflow-nw; }
 		}
 		.item:hover::before { opacity: 0.15; }
+		.item.isReadOnly:hover::before { opacity: 0; }
 	}
 	.menu.menuBlockMore.fromIndex { width: 160px; }
 	
