--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -78,7 +78,7 @@
 	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
 
 	.path { 
-		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
+		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; margin-right: 6px;
 		line-height: 24px; width: 100%; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
@@ -97,7 +97,6 @@
 		.icon.new-set:hover { background-color: transparent; }
 
 		.icon { margin: 0px; opacity: 0; }
-		.icon.plus { margin-left: 6px; }
 		.icon.plus {
 			.arrow { 
 				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
