--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -68,6 +68,7 @@
 			transition: all 0.05s ease-in-out; width: 100%; background: #fff;
 		}
 		.item.isDragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
+		.item.isReadOnly { cursor: default; }
 		
 		.item::before {
 			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
@@ -77,6 +78,7 @@
 		.item.hover, .item:hover {
 			.icon.delete, .icon.more { opacity: 1; }
 		}
+		.item.isReadOnly.hover::before { opacity: 0; }
 
 		.item.active::before { opacity: 0.15; z-index: 0; }
 		.item.active {
