--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -87,7 +87,7 @@ html.platformWindows {
 .dn { display: none !important; }
 .txt { vertical-align: middle; display: inline-block; line-height: 1; }
 .flex { display: flex; }
-.cp { cursor: pointer; }
+.cp { cursor: pointer !important; }
 .nw { white-space: nowrap; }
 .through { pointer-events: none; }
 .rel { position: relative; }
