--- a/src/scss/page/main/relation.scss
+++ b/src/scss/page/main/relation.scss
@@ -1,5 +1,6 @@
 @import "~scss/_vars";
 
+.pageMainRelation { user-select: none; }
 .pageMainRelation {
 	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; }
 	.wrapper {
