--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .pageMainType {
-	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; }
+	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; user-select: none; }
 	.wrapper {
 
 		.block {
