--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -16,8 +16,7 @@
 		kbd { display: inline; font-family: 'Plex'; border-radius: 2px; background: rgba(172,169,150,0.15); }
 
 		smile {
-			img { position: static !important; left: auto !important; top: auto !important; margin: 0px !important; }
-			.smileImage { vertical-align: middle; }
+			img { position: static !important; left: auto !important; top: auto !important; margin: 0px !important; vertical-align: middle; }
 		}
 		smile * { display: inline; }
 		smile .loaderWrapper { display: inline-block; }
