--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -46,7 +46,7 @@
 
 			.loaderWrapper { position: relative; }
 
-			.items { overflow: auto; }
+			.items { height: 100%; }
 			.items {
 				.item { display: inline-block; vertical-align: top; position: relative; cursor: pointer; }
 
