--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -6,7 +6,7 @@
 	.icon.back { margin-right: 8px; }
 	
 	.icon.logo {
-		width: 60px !important; height: 13px !important; position: absolute; left: 50%; margin-left: -30px; top: 13px; background: url('~img/logo.svg') no-repeat;
+		width: 60px !important; height: 13px !important; position: absolute; left: 50%; margin-left: -30px; top: 13px; background: url('~img/logo/white.svg') no-repeat;
 		background-position: center center; background-size: 100% 100% !important;
 	}
 
