--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -33,6 +33,12 @@ input, textarea, select { font-family: 'Inter'; }
 	.sides { display: none; }
 }
 #root > .loaderWrapper { position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; }
+#root > .loaderWrapper {
+	.logo { 
+		width: 120px; height: 24px; background: url('~img/logo/color.svg') no-repeat; background-size: 100% 100%; 
+		position: absolute; left: 50%; top: 50%; margin: -12px 0px 0px -60px; transition: opacity 0.5s ease-in-out;
+	}
+}
 
 html.platformWindows {
 	#drag { height: 30px; background: $colorBlack; z-index: 1000; }
@@ -66,7 +72,7 @@ html.platformWindows {
 	.header {
 		.icon.logo { 
 			width: 40px !important; height: 28px !important; background-size: 20px 20px !important; left: 6px; margin: 0px; top: 5px; 
-			background-image: url('~img/logoSmall.svg'); 
+			background-image: url('~img/logo/small.svg'); 
 		}
 	}
 
