--- a/src/scss/component/title.scss
+++ b/src/scss/component/title.scss
@@ -1,3 +1,3 @@
 @import "~scss/_vars";
 
-.title { font-size: 36px; line-height: 40px; letter-spacing: -0.72px; color: $colorBlack; font-weight: 600; }
+.title { @include text-title; }
