--- a/src/scss/media/dark.scss
+++ b/src/scss/media/dark.scss
@@ -22,4 +22,5 @@
 
 
 	.blocks .block.blockDataview .views .item:hover, .blocks .block.blockDataview .views .item.active { color: #fff; }
+	.blocks .block.blockDataview .viewItem.viewGrid .cellContent.isName .icon.expand { background-color: unset; }
 }
