--- a/src/scss/media/dark.scss
+++ b/src/scss/media/dark.scss
@@ -22,6 +22,8 @@ $colorDarkGrey: $colorWhite;
 	.menus {
 		.menu { background: #444; }
 		.menu.vertical .item { background: #444; }
+
+		.menu.menuDataviewText .textarea { background: #444; }
 	}
 
 	.pageMainIndex {
@@ -46,6 +48,10 @@ $colorDarkGrey: $colorWhite;
 		}
 
 		.block.blockIconUser .iconObject { box-shadow: 0px 0px 0px 2px $colorBlack; }
+
+		.block.blockText.code > .wrapContent > .selectable > .dropTarget { background: #444; }
+
+		.block.blockRelation .info .name { color: #bbb; }
 	}
 
 }
