--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -22,9 +22,9 @@
 			}
 		}
 
-		.body { width: 100%; height: 100%; padding: 96px 96px 56px 96px; overflow-y: auto; display: flex; flex-direction: column; }
+		.body { width: 100%; height: 100%; overflow-y: auto; display: flex; flex-direction: column; }
 		.body {
-			.mid { text-align: center; margin-bottom: 57px; }
+			.mid { text-align: center; padding: 96px 96px 56px 96px; }
 			.mid {
 				.title { margin-bottom: 8px; }
 				.label { @include text-paragraph; margin-bottom: 18px; }
@@ -34,7 +34,7 @@
 				}
 			}
 
-			.tabs { white-space: nowrap; margin-bottom: 26px; }
+			.tabs { white-space: nowrap; margin-bottom: 26px; padding: 0px 96px; }
 			.tabs {
 				.item { 
 					display: inline-block; margin-right: 20px; font-weight: 700; cursor: pointer; font-size: 18px; line-height: 26px; letter-spacing: -0.16px;
@@ -45,6 +45,8 @@
 			}
 
 			.loaderWrapper { position: relative; }
+
+			.ReactVirtualized__List { padding: 0px 96px; }
 
 			.items { height: 100%; }
 			.items {
@@ -87,7 +89,7 @@
 		}
 
 		.wrapper.relation {
-			.mid { margin-bottom: 115px; }
+			.mid { padding-bottom: 114px; }
 			.mid {
 				.label { margin: 0px; }
 				.button { display: none; }
