--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -59,7 +59,7 @@
 		table {
 			.cellHead { 
 				text-align: left; color: #6c6a5f; padding: 14px 0px 14px 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
-				@include text-overflow-nw; cursor: grab;
+				@include text-overflow-nw;
 			}
 			.cellHead {
 				.name { 
