--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -4,8 +4,12 @@
 	.block.blockFeatured { @include text-paragraph; color: #6c6a5f; white-space: nowrap; padding: 2px 0px 30px 0px; }
 	.block.blockFeatured {
 		.wrapMenu { visibility: hidden; }
+
+		.wrap { white-space: normal; }
+
 		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #6c6a5f; display: inline-block; vertical-align: middle; margin: -4px 10px 0px 10px; }
 		.element { display: inline-block; cursor: pointer; }
 		.iconObject { margin-right: 6px; }
+		.cellContent { display: inline-block; vertical-align: middle; }
 	}
 }
