--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -112,9 +112,16 @@
 			.info { height: 32px; padding: 6px 6px 6px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
-			.cell { padding: 5px 8px; margin-right: 6px; }
+			.cell { padding: 5px 8px; margin-right: 6px; width: calc(100% - 218px); }
 			.cell.c-longText.isEditing {
 				.cellContent { padding: 5px 8px !important; }
+			}
+
+			.cell.c-shortText {
+				.name { width: 100%; }
+			}
+			.cell.c-shortText.isName {
+				.name { width: calc(100% - 24px); }
 			}
 
 			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
