--- a/src/scss/menu/search/text.scss
+++ b/src/scss/menu/search/text.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuSearch { width: 400px; height: 44px; padding: 11px 16px; position: fixed; top: 42px !important; }
-	.menu.menuSearch {
+	.menu.menuSearchText { width: 400px; height: 44px; padding: 11px 16px; position: fixed; top: 42px !important; }
+	.menu.menuSearchText {
 		.flex { width: 100%; }
 		.input { width: 100%; height: 22px; padding: 0px; flex: auto; width: calc(100% - 100px); }
 		.buttons { 
