--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -3,7 +3,7 @@
 .pageMainIndex {
 	.wrapper { position: relative; z-index: 1; padding: 90px 0px 0px 0px; margin: 0px auto; }
 	
-	.title { color: #fff; position: relative; height: 48px; }
+	.title { color: #fff; position: relative; height: 64px; margin: 0px auto; position: fixed; top: 142px; }
 	.title {
 		.rightMenu { position: absolute; right: 0px; top: 0px; }
 		.icon { 
