go 1.16 build, CU-eyzmph: New search menu

--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -7,13 +7,14 @@
 
 	.menu.menuBlockMore { width: 256px; }
 	.menu.menuBlockMore {
+		.item { display: flex; }
 		.item {
 			.name { @include text-overflow-nw; }
 		}
 		.item:hover::before { opacity: 0.15; }
 		.item.isReadOnly:hover::before { opacity: 0; }
 	}
-	.menu.menuBlockMore.fromIndex { width: 160px; }
+	.menu.menuBlockMore.fromIndex { width: 230px; }
 	
 	.menu.menuBlockAdd { width: 360px !important; }
 	.menu.menuBlockAdd {
